[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Harley Reeves-Martin <harleyreevesmartin@gmail.com>", "Lewis McKenize <McKenizeLewis39@gmail.com>"]
readme = "README.md"
packages = [ 
    { include = "api" }, 
    { include = "db" },
    { include = "utils" },
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
psycopg2 = "^2.9.9"
alembic = "^1.12.0"
multipledispatch = "^1.0.0"
plaid-python = "^17.0.0"
python-dotenv = "^0.15.0"
cached-property = "^1.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-api = "api.main:start"
